<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedidosPIActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondogeneral"
        android:padding="16dp"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="-216dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/descripcionIcono"
            android:padding="16dp"
            android:src="@drawable/iconoflecha" />


        <TextView
            android:id="@+id/titlePedidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/titlePedido"
            android:textSize="24sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/titlePedidos"
            android:layout_marginTop="30dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/view"
            android:layout_marginTop="50dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/numeroUsuario1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btnEditar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/editar1"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/btnCancelar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/cancelar1"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/numeroUsuario2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario2"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btnEditar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar2"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/btnCancelar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar2"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/numeroUsuario3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario3"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btnEditar3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar3"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/btnCancelar3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar3"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/numeroUsuario4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario4"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btnEditar4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar4"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/btnCancelar4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar4"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/numeroUsuario5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario5"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btnEditar5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editar5"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/btnCancelar5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar5"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>